--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/useradmin?useSSL=false
-spring.datasource.username=alan
-spring.datasource.password=alan134
+spring.datasource.username=root
+spring.datasource.password=ram@3123
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
